qat/intel-qat-kernel-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: intel-qat-kernel-plugin
  labels:
    app: intel-qat-kernel-plugin
spec:
  selector:
    matchLabels:
      app: intel-qat-kernel-plugin
  template:
    metadata:
      labels:
        app: intel-qat-kernel-plugin
    spec:
      containers:
      - name: intel-qat-kernel-plugin
        securityContext:
          readOnlyRootFilesystem: true
          privileged: true
        image: registry.fi.intel.com/ipuustin/intel-qat-plugin:devel
        imagePullPolicy: IfNotPresent
        args: ["-mode", "kernel"]
        volumeMounts:
        - name: devfs
          mountPath: /dev
        - name: etcdir
          mountPath: /etc
          readOnly: true
        - name: kubeletsockets
          mountPath: /var/lib/kubelet/device-plugins
      volumes:
      - name: etcdir
        hostPath:
          path: /etc
      - name: kubeletsockets
        hostPath:
          path: /var/lib/kubelet/device-plugins
      - name: devfs
        hostPath:
          path: /dev
